# chatbot

./: .env  LICENSE  README.md  app.py  example.env  pyproject.toml
endpoints/: chat.py  ingest.py
handlers/: base.py  constant.py
ui/: main.py
utils/: alerts.py
